<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wheelchair_robot_ui</name>
  <version>0.1.0</version>
  <description>휠체어 로봇 웹 UI 패키지 — React 기반 운영 화면 + rosbridge 연동 launch</description>
  <maintainer email="ksjun100848@naver.com">kim</maintainer>
  <license>Apache 2.0</license>

  <!-- 빌드 도구 -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- 런타임 의존성: launch가 rosbridge_websocket을 띄움 -->
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- 테스트 (선택) -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>